# IGIWERM

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: python-package.yml
examples/: toy_example.py  visualization.py
giwerm/: constants.py  covariate_shift_adaptation.py  geometric_functions.py  utils.py
giwerm/model_selection/: __init__.py  iw_cross_validation.py  train_test_split.py
tests/: test_geometric_functions.py
tests/model_selection/: test_train_test_split.py
