[tool.poetry]
name = "giwerm"
version = "0.1.0"
description = "Information Geometrical Generalized Covariate Shift Adaptation"
authors = ["Masanari Kimura <mkimura@tsukuba.ac.jp>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
numpy = "^1.19.5"
pytest-cov = "^2.11.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
