[tool.poetry]
name = "giwerm"
version = "0.1.0"
description = "Information Geometrical Generalized Covariate Shift Adaptation"
authors = ["Masanari Kimura <mkimura@tsukuba.ac.jp>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.19.5"
pytest-cov = "^2.11.0"
flake8 = "^3.8.4"
autoflake = "^1.4"
isort = "^5.7.0"
black = "^20.8b1"
sklearn = "^0.0"
matplotlib = "^3.3.4"
pandas = "^1.2.2"
GPyOpt = "^1.2.6"

[tool.poetry.dev-dependencies]
pytest = "^6.2.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
